Fix footnote text-align

--- a/scss/media.scss
+++ b/scss/media.scss
@@ -110,6 +110,7 @@
 
   .footnote {
     float: footnote;
+    text-align: left;
   }
 }
 
